--- a/front-end-notes/package.json
+++ b/front-end-notes/package.json
@@ -6,8 +6,10 @@
     "apollo-cache-inmemory": "^1.2.2",
     "apollo-client": "^2.3.2",
     "apollo-link-http": "^1.5.4",
+    "axios": "^0.18.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "jwt-decode": "^2.2.0",
     "react": "^16.4.0",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.4.0",
